<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/_12sdp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="@dimen/_30sdp"
                android:text="Create Poll"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/back"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>


    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideStart"
        app:layout_constraintGuide_percent="0.05"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideEnd"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewPollLabel"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poll_question"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/colorSelectedLine"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextQue"
        android:hint="@string/hint_ask_question"
        app:layout_constraintTop_toBottomOf="@id/textViewPollLabel"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewAnsOpt"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer_option"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/colorSelectedLine"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/editTextQue"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewOptionCount"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/textViewAnsOpt"
        android:text="Yop can add 5 more options."/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddOption"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/textViewOptionCount"
        android:paddingHorizontal="@dimen/_15sdp"
        android:layout_width="wrap_content"
        android:drawablePadding="@dimen/_5sdp"
        android:background="@drawable/bg_button"
        android:text="@string/button_add_option"
        android:drawableStart="@drawable/baseline_add_circle_outline"
        android:textColor="@color/white"
        android:drawableTint="@color/white"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="5"
        android:hapticFeedbackEnabled="true"
        tools:listitem="@layout/row_option"
        android:nestedScrollingEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/buttonAddOption"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCreate"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        android:paddingHorizontal="@dimen/_30sdp"
        android:layout_width="wrap_content"
        android:background="@drawable/bg_button"
        android:text="@string/button_create"
        android:textColor="@color/white"
        android:drawableTint="@color/white"
        android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>